tests/specs/npm/sub_paths_non_explicit_cjs_import_faillure/sub_paths_non_explicit_cjs_import_faillure/main3.js
// deno-fmt-ignore
const Server = await import("npm:@denotest/cjs-non-explicit-file@1.0.0/server");
console.log(Server);
